--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "format:fix": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.552.0",
     "next": "^16.0.1",
     "react": "^19.2.0",
