--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.552.0",
+    "nanoid": "^5.1.6",
     "next": "^16.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
