--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^16.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-pdf-highlighter-extended": "^8.1.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -37,5 +38,10 @@
     "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "pdfjs-dist": "4.4.168"
+    }
   }
 }
